--- a/index.html
+++ b/index.html
@@ -13,31 +13,34 @@
         <img src="./ei_ki.jpg" alt="Mi foto de perfil" width="100%" />
 
         <h2>Soy Erick Demis - Student</h2>
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam minima
-            illum, atque aliquam, quo cumque error, officiis voluptate blanditiis
-            quaerat unde? Non quae ab quas, est ipsam veniam. Officia, modi.
-        </p>
         <hr />
     </header>
     <main>
         <section>
-            <h3>Algo sobre mi</h3>
+            <h3>Curiosidades sobre mi</h3>
             <ul>
                 <li>Student</li>
+                <li>Vivo en huamntla</li>
                 <li>Erick</li>
                 <li>Demis</li>
                 <li>Carreón</li>
-                <li>Sanchez</li>
+                <li>Sánchez</li>
             </ul>
         </section>
-        <hr />
         <section>
             <h3>My top tres de animales</h3>
             <ol>
                 <li>Gatos</li>
                 <li>Conejos</li>
                 <li>Zorros</li>
+            </ol>
+        </section>
+        <section>
+            <h3>Peliculas favoritas</h3>
+            <ol>
+                <li>el conjuro</li>
+                <li>Anabel</li>
+                <li>Kimetsu no yaiba</li>
             </ol>
         </section>
     </main>
