--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h3>Curiosidades sobre mi</h3>
             <ul>
                 <li>Student</li>
-                <li>Vivo en huamntla</li>
+                <li>Vivo en huamantla</li>
                 <li>Erick</li>
                 <li>Demis</li>
                 <li>Carreón</li>
