--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mi pagina personal</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
     <header>
-        <div>
+        <div >
             <h1 >Club #Literatura</h1>
             <img src="https://i.pinimg.com/736x/84/1e/c0/841ec0ad539ccc9cbb5cde441ac82dff.jpg" alt="Mi foto de perfil" width="100%" />
             <h2>Soy Erick Demis - Estudiante</h2>
